# thesis

./: .gitignore  README.md
GCSMavV2/: CMakeLists.txt
GCSMavV2/include/: mavlink_helpers.h
GCSMavV2/include/common/: mavlink_msg_actuator_control_target.h  mavlink_msg_altitude.h  mavlink_msg_att_pos_mocap.h  mavlink_msg_attitude_quaternion_cov.h  mavlink_msg_auth_key.h  mavlink_msg_autopilot_version.h  mavlink_msg_button_change.h  mavlink_msg_camera_information.h  mavlink_msg_change_operator_control.h  mavlink_msg_change_operator_control_ack.h  mavlink_msg_command_ack.h  mavlink_msg_command_long.h  mavlink_msg_data_stream.h  mavlink_msg_distance_sensor.h  mavlink_msg_extended_sys_state.h  mavlink_msg_flight_information.h  mavlink_msg_follow_target.h  mavlink_msg_global_position_int.h  mavlink_msg_gps2_rtk.h  mavlink_msg_gps_input.h  mavlink_msg_gps_rtcm_data.h  mavlink_msg_gps_rtk.h  mavlink_msg_gps_status.h  mavlink_msg_heartbeat.h  mavlink_msg_high_latency.h  mavlink_msg_hil_actuator_controls.h  mavlink_msg_hil_controls.h  mavlink_msg_hil_rc_inputs_raw.h  mavlink_msg_hil_state_quaternion.h  mavlink_msg_landing_target.h  mavlink_msg_local_position_ned.h  mavlink_msg_local_position_ned_cov.h  mavlink_msg_local_position_ned_system_global_offset.h  mavlink_msg_log_data.h  mavlink_msg_memory_vect.h  mavlink_msg_mission_ack.h  mavlink_msg_mission_count.h  mavlink_msg_mission_request_int.h  mavlink_msg_mission_request_list.h  (+36 more)
GCSMavV2/src/: main.c
MAVLinkUAV/: .gitignore  CMakeLists.txt
MAVLinkUAV/include/: mavlink_helpers.h
MAVLinkUAV/src/: udpserver.c
(+270 files in other folders)
