cmake_minimum_required(VERSION 3.9.4)
project(GCSMavV2)
include_directories(include)
file(GLOB SOURCES src/*.c)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
add_executable(gcsmavv2 ${SOURCES})
